[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autopeer"
version = "1.0.0"
description = "Auto Peering for DN42"
readme = "README.rst"
license = {text = "ISC"}
keywords = ["dn42", "bgp"]
requires-python = ">= 3.11"
authors = [
  {name = "Aisha Tammy", email = "aisha@bsd.ac"},
]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "apscheduler",
  "fastapi[standard]",
  "python-gnupg",
  "sqlalchemy",
]

[project.scripts]
autopeer = "autopeer.server:main"

[project.urls]
Repository = "https://github.com/bsd-ac/dn42-autopeer"
License = "https://github.com/bsd-ac/dn42-autopeer/blob/main/LICENSE"

[tool.isort]
profile = "black"
